--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
         <!-- Absolute menu/left box -->
         <aside>
             <ul>
-                <li><a href="upcoming-matches.html">Upcoming Match</a></li>
+                <li><a href="upcoming-match.html">Upcoming Match</a></li>
                 <li><a href="#">All Group</a></li>
                 <li><a href="#" id="selected">Blog</a></li>
             </ul>
