--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -48,7 +48,7 @@
             <ul>
                 <li><a href="#" id="selected">Upcoming Match</a></li>
                 <li><a href="#">All Group</a></li>
-                <li><a href="blogs.html">Blog</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
         </aside>
 
